tests/positive/core/array_multi_dim.tx
function main() {
    // 1. Dynamic multi-dimensional arrays
    print("--- Dynamic Multi-Dim ---");
    let dynamic_matrix: int[][] = [[1, 2], [3, 4]];
    print("dynamic_matrix[0][1]:", dynamic_matrix[0][1]); // 2
    print("dynamic_matrix[1][0]:", dynamic_matrix[1][0]); // 3
    
    dynamic_matrix[1][1] = 40;
    print("dynamic_matrix[1][1] updated:", dynamic_matrix[1][1]); // 40

    // 2. Fixed-size multi-dimensional arrays
    print("--- Fixed-Size Multi-Dim ---");
    let fixed_matrix: int[2][2] = [[10, 20], [30, 40]];
    print("fixed_matrix[0][0]:", fixed_matrix[0][0]); // 10
    print("fixed_matrix[1][1]:", fixed_matrix[1][1]); // 40

    fixed_matrix[0][1] = 200;
    print("fixed_matrix[0][1] updated:", fixed_matrix[0][1]); // 200

    // 3. Mixed fixed and dynamic (if supported)
    // let mixed: int[2][] = [[1], [2, 3]]; 
    // print("mixed[1][1]:", mixed[1][1]); // 3

    // 4. Iteration
    print("--- Iteration ---");
    for (let i = 0; i < 2; i++) {
        for (let j = 0; j < 2; j++) {
            print("Element at [", i, "][", j, "]:", fixed_matrix[i][j]);
        }
    }

    // 5. Array of objects
    print("--- Array of Objects ---");
    let obj_array: {x: int}[2] = [{x: 1}, {x: 2}];
    print("obj_array[1].x:", obj_array[1].x); // 2
}
